<resources>
    <string name="app_name">Txzf</string>
    <string name="action_settings">Settings</string>
    <!--login登陆-->
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_remember_password">记住密码</string>
    <string name="login_forget_password">忘记密码</string>
    <string name="login_label_signin">登陆</string>
    <string name="login_network_setting">网络设置</string>
    <string name="login_server_telphone">服务热线：028-5261268</string>
    <!--首页->settings设置-->
    <string name="settings_tv_titlename">系统设置</string>
    <string name="settings_btn_brightness">亮度</string>
    <string name="settings_btn_print">打印测试</string>
    <string name="settings_btn_netsettings">网络设置</string>
    <string name="settings_btn_about">关于同兴支付POS</string>
    <string name="settings_btn_update">系统升级</string>

    <!--首页->historybill历史账单-->
    <string name="histbill_tv_title">账单</string>
    <string name="histbill_btn_help">帮助</string>

</resources>
