<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/new_bj"
    android:orientation="vertical"
    >
    <!--公司logo-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/view_padding60"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/icon_logo"
            android:layout_width="127dp"
            android:layout_height="127dp"
            android:gravity="center_vertical"
            android:src="@drawable/new_txzf_log" />
    </LinearLayout>
    <!-- 用户名 -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/view_padding35"
        android:paddingRight="@dimen/view_padding35" >

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="#c23927"
            android:gravity="center" >

            <ImageView
                android:scaleType="centerInside"
                android:id="@+id/login_username"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_login_account" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:background="#da6540"
            android:layout_height="match_parent" >

            <EditText
                android:id="@+id/login_username_input"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_username_hint"
                android:inputType="text"
                android:paddingLeft="21dp"
                android:singleLine="true"
                android:textColor="#cccccc" />
        </LinearLayout>
    </LinearLayout>
    <!-- 密码 text -->

    <LinearLayout
        android:id="@+id/login_password_input"
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginTop="22.5dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/view_padding35"
        android:paddingRight="@dimen/view_padding35" >

        <LinearLayout
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:background="#c23927"
            android:gravity="center" >
            <ImageView
                android:scaleType="centerInside"
                android:id="@+id/login_password"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:src="@drawable/icon_login_password" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="#da6540"
            android:gravity="center" >
            <EditText
                android:id="@+id/password_input"
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingLeft="21dp"
                android:singleLine="true"
                android:textColor="#cccccc" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15.5dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/view_padding35"
        android:paddingRight="@dimen/view_padding35"
        >

        <!-- 记住密码 -->

        <CheckBox
            android:id="@+id/login_btn_remember_password"
            android:layout_width="40dp"
            android:scaleY="0.2"
            android:scaleX="0.2"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            android:maxHeight="@dimen/view_padding2"
            android:button="@drawable/checkselector"
            android:text="@string/login_remember_password"
            android:textSize="@dimen/view_padding20"
            android:textColor="@android:color/white"
            android:checked="false"/>
        <!-- 忘记密码 -->

        <TextView
            android:clickable="true"
            android:id="@+id/login_btn_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical|right"
            android:maxHeight="@dimen/view_padding2"
            android:text="@string/login_forget_password"
            android:background="#00000000"
            android:textSize="@dimen/view_padding20"
            android:textColor="@color/login_font_input" />
    </LinearLayout>



    <!-- 登录button -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:layout_marginTop="@dimen/view_padding25"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/view_padding35"
        android:paddingRight="@dimen/view_padding35" >

        <Button
            android:id="@+id/login_btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login"
            android:height="@dimen/login_button"
            android:minHeight="@dimen/login_button"
            android:text="@string/login_label_signin"
            android:textSize="@dimen/view_padding25"
            android:textColor="#c83b2d"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/view_padding40"
        android:layout_marginTop="88.5dp"
        android:orientation="horizontal"
        android:paddingLeft="111dp"
        android:paddingRight="111dp" >

        <Button
            android:id="@+id/lopgin_btn_wifiset"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_padding5"
            android:drawableLeft="@drawable/icon_login_wifi"
            android:drawablePadding="@dimen/view_btn_pidding10"
            android:height="@dimen/login_button"
            android:minHeight="@dimen/login_button"
            android:paddingLeft="27dp"
            android:text="@string/login_network_setting" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/view_padding40"
        android:layout_marginBottom="@dimen/view_padding5"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/view_padding102"
        android:paddingRight="@dimen/view_padding102" >

        <TextView
            android:id="@+id/submit_button_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_padding5"
            android:gravity="center"
            android:text="@string/login_server_telphone"
            android:textColor="@color/login_font_input" />
    </LinearLayout>

</LinearLayout>
