<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="paygate.jszf.com.txzf.SettingActivity">
    <!--头部-->
    <LinearLayout
        android:id="@+id/settings_ll_tabtitle"
        android:background="@color/home_red"
        android:layout_width="match_parent"
        android:gravity="center_vertical"
        android:layout_height="@dimen/view_padding60">
        <ImageButton
            android:background="@null"
            android:id="@+id/settings_btn_back"
            android:src="@drawable/ico_back"
            android:layout_width="45dp"
            android:paddingLeft="@dimen/view_padding20"
            android:layout_height="27dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_padding20"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size25"
            android:text="@string/settings_tv_titlename"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/settings_ll_tabtitle"
        android:background="@color/setttings_background"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">
        <!--亮度-->
        <LinearLayout
            android:id="@+id/settings_llayout_brightness"
            style="@style/settings_layout_options"
            android:background="@drawable/home_selector_options"
            >
            <ImageView
                android:layout_marginLeft="@dimen/view_btn_pidding20"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingRight="@dimen/view_btn_pidding15"
                android:src="@drawable/settings_icon_light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_brightness"
                android:textSize="@dimen/text_size18"
                />
        </LinearLayout>
        <!--打印-->
        <LinearLayout
            android:id="@+id/settings_llayout_print"
            style="@style/settings_layout_options"
            android:background="@drawable/home_selector_options"
            >
            <ImageView
                android:layout_marginLeft="@dimen/view_btn_pidding20"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingRight="@dimen/view_btn_pidding15"
                android:src="@drawable/settings_icon_print"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_print"
                android:textSize="@dimen/text_size18"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/view_padding20"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon_record_arrow"
                    />
            </RelativeLayout>

        </LinearLayout>
        <!--网络设置-->
        <LinearLayout
            android:id="@+id/settings_llayout_netsetting"
            style="@style/settings_layout_options"
            android:background="@drawable/home_selector_options"
            >
            <ImageView
                android:layout_marginLeft="@dimen/view_btn_pidding20"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingRight="@dimen/view_btn_pidding15"
                android:src="@drawable/settings_icon_wifi"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_netsettings"
                android:textSize="@dimen/text_size18"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/view_padding20"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon_record_arrow"
                    />
            </RelativeLayout>
        </LinearLayout>
        <!--关于-->
        <LinearLayout
            android:id="@+id/settings_llayout_about"
            style="@style/settings_layout_options"
            android:background="@drawable/home_selector_options"
            >
            <ImageView
                android:layout_marginLeft="@dimen/view_btn_pidding20"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingRight="@dimen/view_btn_pidding15"
                android:src="@drawable/settings_icon_about"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_about"
                android:textSize="@dimen/text_size18"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/view_padding20"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon_record_arrow"
                    />
            </RelativeLayout>
        </LinearLayout>
        <!--系统升级-->
        <LinearLayout
            android:id="@+id/settings_llayout_update"
            style="@style/settings_layout_options"
            android:background="@drawable/home_selector_options"
            >
            <ImageView
                android:layout_marginLeft="@dimen/view_btn_pidding20"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:paddingRight="@dimen/view_btn_pidding15"
                android:src="@drawable/settings_icon_update"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings_btn_update"
                android:textSize="@dimen/text_size18"
                />
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/view_padding20"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/icon_record_arrow"
                    />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
